# grpo

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  typos.toml
.github/workflows/: ci.yml
src/grpo/andriy_burkov_lm_book/: README.md  completions.py  data_process.py  evaluation.py  reward_functions.py  train_grpo.py
src/grpo/grpo_zero/: README.md  config.yaml  countdown_task.py  data_types.py  grpo.py  optimizer.py  qwen2_model.py  tokenizer.py  train.py
src/grpo/nano_aha_moment/: README.md  config.py  episode_creation.py  nano_r1_train.py  policy_gradient_loss.py  reward_functions.py  utils.py
src/grpo/simple_grpo/: README.md  completions.py  ref_model_server.py  reward_functions.py  train_grpo.py
